--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@youwol/cdn-explorer",
-    "version": "0.0.1-wip",
+    "version": "0.0.1",
     "description": "CDN explorer application",
     "author": "greinisch@youwol.com",
     "main": "dist/index.html",
