--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "build:prod": "del-cli dist && webpack --mode production",
         "test": "jest -c ./jest.config.js --rootDir . -i",
         "test-coverage": "jest -c ./jest.config.js --rootDir . -i --collect-coverage --collectCoverageFrom=./src/app/**/*.ts ",
-        "doc": "typedoc src/ --exclude src/index.ts --exclude src/tests --out dist/docs --theme default",
+        "doc": "typedoc",
         "start": "webpack serve",
         "publish-npm-public": "yarn build:prod && yarn test-coverage && yarn publish --access public"
     },
