--- a/package.json
+++ b/package.json
@@ -16,21 +16,21 @@
     },
     "license": "MIT",
     "dependencies": {
-        "@youwol/cdn-client": "0.1.3 - 1",
-        "@youwol/flux-view": "0.1.1 - 1",
-        "@youwol/fv-group": "0.1.1 - 1",
-        "@youwol/fv-tabs": "0.1.2 - 1",
-        "@youwol/fv-input": "0.1.0 - 1",
-        "@youwol/fv-button":"0.0.4 - 1",
-        "@youwol/http-clients": "0.1.9 - 1",
-        "@youwol/installers-youwol": "0.0.1 - 1",
-        "@youwol/installers-stories": "0.0.1 - 1",
-        "@youwol/installers-flux": "0.0.1 - 1",
-        "@youwol/os-core": "0.0.1 - 1",
-        "@youwol/os-top-banner": "0.0.1 - 1",
-        "uuid": "^8.3.2",
-        "lodash": "^4.17.15",
-        "rxjs": "^6.5.5"
+        "@youwol/cdn-client": ">=0.1.4 <1",
+        "@youwol/flux-view": ">=0.1.1 <1",
+        "@youwol/fv-group": ">=0.1.1 <1",
+        "@youwol/fv-tabs": ">=0.1.2 <1",
+        "@youwol/fv-input": ">=0.1.0 <1",
+        "@youwol/fv-button":">=0.0.4 <1",
+        "@youwol/http-clients": ">=0.1.11 <1",
+        "@youwol/installers-youwol": ">=0.0.1 <1",
+        "@youwol/installers-stories": ">=0.0.1 <1",
+        "@youwol/installers-flux": ">=0.0.1 <1",
+        "@youwol/os-core": ">=0.0.1 <1",
+        "@youwol/os-top-banner": ">=0.0.1 <1",
+        "uuid": ">=8.3.2 <9",
+        "lodash": ">=4.17.15 <5",
+        "rxjs": ">=6.5.5 <7"
     },
     "devDependencies": {
         "js-beautify": "^1.14.0",
