--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
         "del-cli": "^5.0.0",
         "@youwol/prettier-config": "^0.0.2",
         "@youwol/eslint-config": "^0.0.2",
-        "@youwol/tsconfig": "^0.0.1",
+        "@youwol/tsconfig": "^0.0.2",
         "prettier": "^2.7.1",
         "prettier-plugin-properties": "^0.2.0",
         "@typescript-eslint/eslint-plugin": "^5.33.1",
@@ -57,10 +57,10 @@
         "eslint-plugin-jest": "^26.8.4",
         "eslint-plugin-tsdoc": "^0.2.16",
         "eslint-plugin-unused-imports": "^2.0.0",
-        "css-loader": "5.2.0",
+        "css-loader": "^6.7.2",
         "file-loader": "6.2.0",
         "html-webpack-plugin": "5.2.0",
-        "mini-css-extract-plugin": "1.3.9",
+        "mini-css-extract-plugin": "^2.7.0",
         "source-map-loader": "2.0.1",
         "webpack-dev-server": "^4.7.1"
     },
