--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@youwol/cdn-explorer",
     "description": "CDN explorer application",
-    "version": "0.1.4-wip",
+    "version": "0.1.4",
     "author": "greinisch@youwol.com",
     "homepage": "https://github.com/youwol/cdn-explorer#README.md",
     "main": "dist/index.html",
